--- a/style.css
+++ b/style.css
@@ -1,20 +1,35 @@
-
 #game-container {
-    width: 1300px;
-    height: 600px;
-    border: 1px solid #000;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
     position: relative;
   }
+  
   .ship {
-    width: 30px;
+    width: 50px;
     height: 20px;
     background-color: blue;
     position: absolute;
     bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
   }
+  
   .alien {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     background-color: red;
     position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
   }
+  
+  .bullet {
+    width: 5px;
+    height: 10px;
+    background-color: yellow;
+    position: absolute;
+    display: none;
+  }
+  
