--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
+* {
+  background-color: black;
+}
 
 #game-container {
     width: 100%;
-    min-height: 800px;;
-    border: 1px solid #000;
+    height: 900px;
+    border: 2px solid white;
+    background-color: black;
     position: relative;
   }
   .ship {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px; 
     background-color: blue;
+    position: absolute;
     bottom: 10px;
     position: absolute;
   }
@@ -17,4 +22,17 @@
     height: 40px;
     background-color: red;
     position: absolute;
+    transform: translateX(-50%);
+  }
+  
+  .bullet {
+    width: 5px;
+    height: 10px;
+    background-color: yellow;
+    position: absolute;
+    display: none;
+  }
+  
+  h1 {
+    color: white;
   }
