--- a/style.css
+++ b/style.css
@@ -1,38 +1,45 @@
-* {
+html,body {
   background-color: black;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  display: flex;
+  position: fixed;
 }
 
 #game-container {
-    width: 100%;
-    height: 900px;
+    width: 1500px;
+    height: 1000px;
+    overflow: hidden;
     border: 2px solid white;
     background-color: black;
-    position: relative;
+    display: flex;
+    justify-content: center;
   }
-  .ship {
+
+.ship {
     width: 50px;
     height: 50px; 
     background-color: blue;
-    position: absolute;
-    bottom: 10px;
-    position: absolute;
+    bottom: 0px;
+    align-self: flex-end;
   }
-  .alien {
+
+.alien {
     width: 40px;
     height: 40px;
     background-color: red;
     position: absolute;
     transform: translateX(-50%);
+    align-items: flex-start;
   }
   
-  .bullet {
+.bullet {
     width: 5px;
     height: 10px;
     background-color: yellow;
     position: absolute;
     display: none;
-  }
-  
-  h1 {
-    color: white;
   }
